--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -89,13 +89,14 @@
 
         .content {
             display: grid;
-            overflow-x: auto;
+            overflow-x: scroll;
             grid-template-columns: repeat(auto-fill, minmax(1fr, var(--component-product-card-width)));
             grid-auto-columns: 1fr;
             grid-auto-rows: 1fr;
             grid-auto-flow: column;
+
             padding: var(--block-padding-large);
-            overscroll-behavior: auto auto;
+
             scroll-snap-type: x mandatory;
             scroll-behavior: smooth;
         }
