--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -19,10 +19,7 @@
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
             gap: var(--block-spacer);
-            grid-template-columns: repeat(
-                auto-fill,
-                minmax(calc(var(--component-product-card-width) + var(--block-padding)), 1fr)
-            );
+            grid-template-columns: repeat(auto-fill, minmax(var(--component-product-card-width), 1fr));
         }
 
         .viewAll {
