Storefront: Fix favicon.

--- a/apps/web/src/components/informational/accepted-payment-methods.module.scss
+++ b/apps/web/src/components/informational/accepted-payment-methods.module.scss
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
     gap: var(--block-spacer-small);
     justify-content: center;
     align-items: center;
