--- a/apps/web/src/slices/common/ImageGrid/image-grid.module.scss
+++ b/apps/web/src/slices/common/ImageGrid/image-grid.module.scss
@@ -20,13 +20,6 @@ section.container {
         grid-template-rows: auto 1fr;
         border-radius: var(--block-border-radius);
         cursor: pointer;
-        outline-color: var(--accent-secondary-light);
-        outline-width: 0;
-
-        &:is(:hover, :active) {
-            background: var(--accent-primary);
-            outline: var(--block-border-width) solid var(--accent-primary);
-        }
 
         .title-container {
             display: flex;
@@ -34,7 +27,9 @@ section.container {
             align-items: center;
             height: auto;
             padding: var(--block-padding) var(--block-padding-large);
-            transition: 150ms ease-in-out outline-color;
+            transition:
+                250ms ease-in-out background-color,
+                150ms ease-in-out color;
             border-radius: var(--block-border-radius);
             border-top-right-radius: 0;
             border-top-left-radius: 0;
@@ -55,6 +50,14 @@ section.container {
                 line-height: 2rem;
 
                 color: var(--accent-secondary-text);
+            }
+        }
+
+        &:is(:hover, :active) .title-container {
+            background: var(--color-accent-primary);
+
+            .title {
+                color: var(--accent-primary-text);
             }
         }
     }
