Storefront: Update top-level components to use properly React suspense.
This introduces a new `{componentName}.skeleton` pattern. This pattern
deliberately uses a lower-case `skeleton` suffix to warn developers that
this is not a component that should be used normally. Instead, it is a
component that should only be used only with `<Suspense>`.

--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -275,11 +275,13 @@
     grid-area: product-actions;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr minmax(4rem, 1fr);
+    grid-template-rows: 1fr 4rem;
     grid-auto-flow: dense;
     gap: var(--block-spacer);
-    justify-content: space-between;
-    align-items: end;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+    height: 100%;
 }
 
 /* TODO: Move these into it's own component. */
