Storefront: Refactor coollection & co to be RSC.

--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -99,9 +99,9 @@
         }
 
         &.skeleton {
+            // TODO: Shimmer effect.
             .content {
-                display: flex;
-                overflow-x: hidden;
+                overflow-x: visible;
             }
         }
     }
