--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -20,7 +20,7 @@
     --color-block: #ececec;
     --color-block-light: #f5f5f5;
     --color-block-dark: #bebebe;
-    --color-block-black: #7c7c7c;
+    --color-block-black: #727272;
     --color-block-shadow: rgba(0, 0, 0, 0.35);
 
     --color-gray: #989898;
