--- a/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
+++ b/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
@@ -1,7 +1,7 @@
 @import '_globals.scss';
 
 .container {
-    position: absolute;
+    position: fixed;
     inset: 7rem 0 0 -105vw;
     display: flex;
     flex-grow: 1;
@@ -9,9 +9,8 @@
     z-index: 5;
     width: 38rem;
     max-width: 100vw;
-    height: 100%;
-    height: calc(100vh - 7rem);
-    height: calc(100dvh - 7rem);
+    height: calc(100vh - 8rem);
+    height: calc(100dvh - 8rem);
     padding: var(--block-padding);
 
     background: var(--accent-secondary-light);
