--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -85,7 +85,7 @@
         gap: 0.15rem;
         width: 100%;
         height: 100%;
-        font-size: 2rem;
+        font-size: 2.25rem;
         line-height: 1.05;
         hyphens: auto;
 
@@ -116,10 +116,9 @@
     .quantity-action {
         display: grid;
         grid-template-columns: auto 1fr;
-        justify-content: space-between;
-        align-items: end;
-        align-self: end;
-        height: 100%;
+        justify-content: flex-end;
+        align-items: flex-end;
+        align-self: flex-end;
         margin-top: var(--block-spacer-small);
     }
 
@@ -133,6 +132,10 @@
         height: 100%;
         font-size: 1.75rem;
 
+        @media (max-width: $breakpoint-mobile) {
+            padding-bottom: var(--block-spacer-large);
+        }
+
         .variant {
             appearance: none;
             -webkit-appearance: none;
@@ -143,13 +146,17 @@
             align-items: center;
 
             font-weight: 500;
-            font-size: 1em;
+            font-size: 1.15em;
             line-height: 1;
             text-align: right;
 
             cursor: pointer;
-            opacity: 0.75;
+            opacity: 0.95;
             transition: 150ms ease-in-out color;
+
+            @media (min-width: $breakpoint-mobile) {
+                font-size: 1em;
+            }
 
             &[data-active='true'] {
                 opacity: 1;
@@ -172,6 +179,7 @@
         justify-self: end;
 
         height: 3.25rem;
+        margin-bottom: 0;
 
         font-size: 1.25rem;
         line-height: 1.75rem;
