--- a/apps/web/src/app/(shops)/_components/content.module.scss
+++ b/apps/web/src/app/(shops)/_components/content.module.scss
@@ -1,3 +1,5 @@
+@import '_globals.scss';
+
 .container,
 article.container {
     --small-spacing: calc(var(--layout-block-padding) / 3);
@@ -9,12 +11,12 @@ article.container {
     width: 100%;
     max-width: 100%;
     margin-top: calc(var(--layout-section-spacing) * 2);
-    font-size: 1em;
+    font-size: 1.15em;
 
-    @media (min-width: 950px) {
+    @media (min-width: $breakpoint-mobile) {
         --small-spacing: calc(var(--layout-block-padding) / 2);
 
-        font-size: 1.15em;
+        font-size: 1.25em;
     }
 
     h2,
@@ -25,7 +27,7 @@ article.container {
         line-height: 1.1;
         color: var(--color-foreground);
 
-        @media (min-width: 950px) {
+        @media (min-width: $breakpoint-mobile) {
             font-size: 3.25em;
         }
 
@@ -43,7 +45,7 @@ article.container {
         text-transform: uppercase;
         color: var(--color-foreground);
 
-        @media (min-width: 950px) {
+        @media (min-width: $breakpoint-mobile) {
             font-size: 2em;
         }
 
@@ -98,7 +100,7 @@ article.container {
         object-fit: cover;
         aspect-ratio: 16 / 6;
 
-        @media (min-width: 950px) {
+        @media (min-width: $breakpoint-mobile) {
             aspect-ratio: 16 / 4;
         }
     }
