--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -4,15 +4,14 @@
     overflow: hidden;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 2.25rem;
+    grid-template-columns: 1fr 3.5rem;
     flex-grow: 0;
     gap: 0;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    max-height: 4.25rem;
+    height: calc(100% - var(--block-padding) * 2);
     padding: var(--block-padding-small) 0;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 400;
     line-height: 1;
     text-align: center;
@@ -23,9 +22,9 @@
     }
 
     .icon {
-        height: 100%;
+        display: block;
         width: 100%;
-        margin-bottom: 0.15rem;
+        height: calc(100% - var(--block-padding-small));
     }
 
     .quantity {
@@ -48,7 +47,8 @@
     }
 
     @media (min-width: $breakpoint-mobile) {
-        max-height: 3.5rem;
+        height: calc(100% - var(--block-padding) * 2);
+
         font-size: 2.5rem;
     }
 
@@ -58,11 +58,9 @@
         background-color: var(--accent-primary);
         color: var(--accent-primary-text);
         border-radius: 5rem;
-        font-size: 2.25rem;
 
         @media (min-width: $breakpoint-mobile) {
             padding: var(--block-padding-small) var(--block-padding);
-            font-size: 2.15rem;
         }
 
         svg {
@@ -72,8 +70,7 @@
         }
 
         .quantity {
-            font-size: 0.9em;
-            font-weight: 700;
+            font-weight: 600;
             width: fit-content;
             padding: 0 0.25rem;
         }
