--- a/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
+++ b/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
@@ -9,9 +9,9 @@
     z-index: 5;
     width: 38rem;
     max-width: 100vw;
-    height: calc(100vh - 8rem);
-    height: calc(100dvh - 8rem);
-    padding: var(--block-padding);
+    height: calc(100vh - 7.5rem);
+    height: calc(100dvh - 7.5rem);
+    padding: var(--block-padding) var(--block-padding) var(--block-padding-large) var(--block-padding);
 
     background: var(--accent-secondary-light);
     border-right: var(--block-border-width) solid var(--accent-secondary-dark);
