--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -10,7 +10,7 @@
     gap: calc(var(--block-spacer-small) / 2);
 
     height: 100%;
-    min-height: 36rem;
+    min-height: 40rem;
     width: 100%;
     min-width: var(--component-product-card-width);
     padding: calc(var(--block-padding) - var(--block-border-width));
@@ -22,9 +22,7 @@
     box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
     scroll-snap-align: center;
 
-    // See https://web.dev/articles/content-visibility
-    content-visibility: auto;
-    contain-intrinsic-size: var(--component-product-card-width);
+    contain-intrinsic-size: var(--component-product-card-width) 40rem;
 
     &[data-available='false'] {
         opacity: 0.75;
