--- a/apps/web/src/components/informational/vendors.module.scss
+++ b/apps/web/src/components/informational/vendors.module.scss
@@ -12,7 +12,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 1.25rem;
+    font-size: 0.85em;
     font-weight: 700;
     line-height: 1;
     cursor: pointer;
@@ -22,7 +22,7 @@
         color: var(--accent-secondary-text);
     }
 
-    @media (max-width: 950px) {
+    @media (max-width: $breakpoint-mobile) {
         margin-right: var(--block-spacer);
     }
 }
