--- a/apps/web/src/components/layout/page-provider.module.scss
+++ b/apps/web/src/components/layout/page-provider.module.scss
@@ -3,6 +3,7 @@
 .announcements {
     z-index: 2;
     width: 100%;
+    font-size: 16px; // FIXME: Set this in `app.scss`.
 
     .announcement {
         display: flex;
@@ -12,17 +13,22 @@
         height: 100%;
         padding: var(--block-padding-large);
         text-transform: uppercase;
-        font-size: 1.45rem;
+        font-size: 0.825em;
+        font-weight: 650;
         line-height: 1.1;
         text-align: center;
 
         @media (min-width: $breakpoint-mobile) {
-            font-size: 1.35rem;
+            font-size: 0.85em;
         }
 
         & :is(p, a) {
             font-size: inherit;
             font-weight: inherit;
+        }
+
+        & :is(b, strong) {
+            font-weight: 900;
         }
     }
 }
