--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -20,7 +20,7 @@
     --color-block: #ececec;
     --color-block-light: #f5f5f5;
     --color-block-dark: #bebebe;
-    --color-block-black: #727272;
+    --color-block-black: #6e6e6e;
     --color-block-shadow: rgba(0, 0, 0, 0.35);
 
     --color-gray: #989898;
@@ -189,4 +189,11 @@ svg .primary {
     stroke: inherit !important;
     color: inherit !important;
     fill: inherit !important;
+}
+
+* {
+    box-sizing: border-box;
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
