--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -10,8 +10,9 @@
     justify-content: center;
     align-items: center;
     height: calc(100% - var(--block-padding) * 2);
+    max-height: 3.75rem;
     padding: var(--block-padding-small) 0;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     font-weight: 400;
     line-height: 1;
     text-align: center;
@@ -22,9 +23,10 @@
     }
 
     .icon {
+        overflow: hidden;
         display: block;
         width: 100%;
-        height: calc(100% - var(--block-padding-small));
+        height: 2.75rem;
     }
 
     .quantity {
@@ -49,11 +51,11 @@
     @media (min-width: $breakpoint-mobile) {
         height: calc(100% - var(--block-padding) * 2);
 
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
-    &[data-items]:not([data-items='0']) {
-        gap: var(--block-spacer-small);
+    &[data-items]:not([data-items='0'], :disabled) {
+        gap: calc(var(--block-spacer-small) / 2);
         padding: var(--block-padding-small) calc(var(--block-padding) * 1.25);
         background-color: var(--accent-primary);
         color: var(--accent-primary-text);
@@ -70,7 +72,7 @@
         }
 
         .quantity {
-            font-weight: 600;
+            font-weight: 500;
             width: fit-content;
             padding: 0 0.25rem;
         }
