--- a/apps/web/src/components/informational/vendors.module.scss
+++ b/apps/web/src/components/informational/vendors.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: var(--block-padding) var(--block-padding);
+    padding: var(--block-padding) var(--block-padding-small);
     background: var(--accent-secondary);
     color: var(--accent-secondary-text);
 
