--- a/apps/web/src/components/typography/pricing.module.scss
+++ b/apps/web/src/components/typography/pricing.module.scss
@@ -1,61 +1,58 @@
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-end;
-    gap: var(--block-spacer-small);
+.price {
+    color: var(--color-dark);
+}
 
-    @media (min-width: 920px) {
-        flex-direction: column-reverse;
-        gap: 0;
+.current {
+    grid-area: pricing;
+    position: relative;
+    display: inline-block;
+
+    height: 100%;
+
+    font-size: 1.25em;
+    line-height: 1;
+    font-weight: 600;
+
+    &.sale {
+        color: var(--color-sale);
     }
+}
 
+.previous {
+    grid-area: previous-pricing;
+    position: relative;
+    display: inline-block;
+
+    height: 100%;
+
+    font-size: 0.9em;
+    font-weight: 500;
+
+    &,
     .price {
-        color: var(--color-dark);
+        color: var(--color-block-black);
     }
 
-    .current {
-        position: relative;
-        display: inline-block;
-        font-size: 2.75em;
-        line-height: 1;
-        font-weight: 600;
+    // Optically balance.
+    padding-bottom: 0.05rem;
+}
 
-        &.sale {
-            color: var(--color-sale);
-        }
-    }
+.dash {
+    position: relative;
+    text-decoration: none;
 
-    .previous {
-        position: relative;
-        display: inline-block;
-        font-size: 2.15em;
-        font-weight: 500;
+    height: 100%;
 
-        &,
-        .price {
-            color: var(--color-block-black);
-        }
-
-        // Optically balance.
-        padding-bottom: 0.15rem;
-    }
-
-    .dash {
-        position: relative;
-        text-decoration: none;
-
-        &::before {
-            content: '';
-            position: absolute;
-            display: block;
-            height: 0.15rem;
-            width: 95%;
-            inset: 48% 0 0 2.5%;
-            white-space: nowrap;
-            border-radius: 1rem;
-            transform: rotate(-15deg);
-            background: var(--color-block-black);
-        }
+    &::before {
+        content: '';
+        position: absolute;
+        display: block;
+        height: 0.15rem;
+        width: 95%;
+        inset: 48% 0 0 2.5%;
+        white-space: nowrap;
+        border-radius: 1rem;
+        transform: rotate(-15deg);
+        background: var(--color-block-black);
     }
 }
