--- a/apps/web/src/components/Header/header-navigation.module.scss
+++ b/apps/web/src/components/Header/header-navigation.module.scss
@@ -4,7 +4,7 @@
     content-visibility: hidden;
 
     @media (min-width: $breakpoint-header) {
-        content-visibility: auto
+        content-visibility: auto;
         display: flex;
         justify-content: flex-start;
         align-items: center;
