--- a/apps/web/src/slices/common/Collection/collection.module.scss
+++ b/apps/web/src/slices/common/Collection/collection.module.scss
@@ -2,6 +2,7 @@
 
 .container {
     display: flex;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: var(--block-spacer-large);
 
@@ -14,6 +15,7 @@
 
     .header {
         display: flex;
+        -ms-flex-direction: column;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
